cluster/apps/adminer/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`adminer.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: adminer
          namespace: default
      services:
        - name: adminer-svc
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
spec:
  ipWhiteList:
    sourceRange:
      - 10.244.0.0/16
      - 10.10.0.0/24
      - 10.8.0.0/24
      - 192.168.10.0/24
      - 192.168.200.0/24
